Changing CSS structure & Add Profile slicing

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/homeStyles.css" />
+    <link rel="stylesheet" href="assets/css/navbar.css" />
+    <link rel="stylesheet" href="assets/css/jumbotron.css" />
   </head>
 
   <body>
-    <!-- JUMBO TRON -->
+    <!-- JUMBOTRON -->
     <div class="jumbotron jumbotron-fluid jumbotron-image">
       <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <div class="container">
@@ -41,7 +43,7 @@
             id="navbarNavAltMarkup"
           >
             <ul class="navbar-nav">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link active" href="#">Home</a>
               </li>
               <li class="nav-item">
@@ -83,7 +85,7 @@
               <img src="./assets/images/user.png" alt="" />
             </div>
             <div class="col-md">
-              <h1 class="display-4">25</h1>
+              <h1 class="number">25</h1>
               <h6 class="angkatan">Angkatan 2018</h6>
             </div>
           </div>
@@ -96,7 +98,7 @@
               <img src="./assets/images/user.png" alt="" />
             </div>
             <div class="col-md">
-              <h1 class="display-4">44</h1>
+              <h1 class="number">44</h1>
               <p class="angkatan">Angkatan 2019</p>
             </div>
           </div>
@@ -109,7 +111,7 @@
               <img src="./assets/images/user.png" alt="" />
             </div>
             <div class="col-md">
-              <h1 class="display-4">56</h1>
+              <h1 class="number">56</h1>
               <p class="angkatan">Angkatan 2020</p>
             </div>
           </div>
@@ -165,6 +167,7 @@
     <!-- GALERI -->
     <div
       class="
+        gallery
         container
         d-flex
         flex-column
@@ -179,7 +182,7 @@
       <p class="text-center m-3"
          data-aos="fade-down"
          data-aos-easing="linear"
-         data-aos-duration="1000">>
+         data-aos-duration="1000">
         Dokumentasi seluruh kegiatan HIMATIF, termasuk program kerja, foto
         bersama dan lain-lain.
       </p>
@@ -421,7 +424,7 @@
          data-aos-duration="1000"
          id="kontak" class="container d-flex shadow shadow-lg contact">
       <div class="d-flex justify-content-center flex-column">
-        <h2>Kontak Kami</h2>
+        <h1>Kontak Kami</h1>
         <h6 class="font-weight-bold text-secondary">
           INSTITUT TEKNOLOGI GARUT
         </h6>
