--- a/profile.html
+++ b/profile.html
@@ -1,18 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile | HIMATIF ITG</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.9/dist/css/splide.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
-    />
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Halaman Profil | HIMATIF</title>
+  <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="assets/css/profileStyles.css" />
+  <link rel="stylesheet" href="assets/css/navbar.css" />
+
+</head>
+<body>
+<!-- Navbar Start -->
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+  <div class="container">
+    <a href="" class="navbar-brand">
+      <img src="./assets/images/logo-himatif.png" alt="Logo Himatif"/>
+    </a>
+    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Artikel</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="profile.html">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Galeri</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Kontak</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  <!-- Navbar End. -->
+
+<!-- Path -->
+<div class="container path">
+  <div class="col">
+    <p>Home / Profil</p>
+  </div>
+<!-- Path End. -->
+
+<!-- Content Border -->
+<div class="content-border">
+  <!-- Profile -->
+  <div class="content">
+    <div class="d-flex flex-column align-items-center profile">
+      <img src="/assets/images/logo-himatif.png" alt="Logo Himatif"/>
+      <h5>Himpunan Mahasiswa Teknik Informatika</h5>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto consectetur, dicta dolore, fugiat illo impedit inventore ipsam molestiae non nostrum porro ratione sapiente similique tempore. Delectus laboriosam possimus sit.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto consectetur, dicta dolore, fugiat illo impedit inventore ipsam molestiae non nostrum porro ratione sapiente similique tempore. Delectus laboriosam possimus sit.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto consectetur, dicta dolore, fugiat illo impedit inventore ipsam molestiae non nostrum porro ratione sapiente similique tempore. Delectus laboriosam possimus sit.</p>
+    </div>
+    <div class="d-flex flex-column align-items-center visi-misi justify-content-between">
+      <h5>Tujuan</h5>
+      <ul class="d-flex flex-column">
+        <li>
+          Meningkatkan kualitas Mahasiswa Program Studi Informatika melalui
+          pemberdayaan Himpunan Mahasiswa secara komprehensif dan berwawasan
+          global
+        </li>
+        <li>
+          Menjadi sebuah Himpunan Mahasiswa yang lebih aktif dan menjunjung
+          tinggi nilai kekeluargaam serta menjadi wadah aspirasi dan
+          kreativitas bagi Mahasiswa Informatika STT-Garut.
+        </li>
+        <li>
+          Menjalin hubungan yang baik dan membangun kekeluarhaam antara
+          pengurus, anggota HIMATIF dan Program Studi Informatika.
+        </li>
+        <li>Mengoptimalkan fungsional-fungsional setiap divisi.</li>
+        <li>
+          Menjalin hubungan yang baik dengan pihak internal maupun eksternal
+          dengan cara memperluas jaringan dengan alumni, civitas akademika
+          serta organisasi atau lembaga.
+        </li>
+        <li>
+          Menyelenggarakan kegiatan yang mendukung tercapainya Mahasiswa
+          Program Studi Informatika yang Kreatif, Aktif, Terampil dan
+          Berwawasan.
+        </li>
+        <li>
+          Menampung seluruh elemen Mahasiswa Informatika menuju kehidupan
+          Kampus kritis yang mengedepankan Musyawarah Mufakat, Bertanggung
+          jawab, Dinamis dan Harmonis.
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!-- Profile End. -->
+</div>
+<!-- Content Border End. -->
+
+<!--  Struktur Organisasi -->
+  <div class="struktur">
+    <h3 class="text-center">Struktur Organisasi</h3>
+    <div class="border-image">
+
+    </div>
+  </div>
+<!--  Struktur Organisasi End.-->
+
+</div>
+</body>
 </html>
