added profile,galeri,kontak page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a class="nav-link active" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#artikel">Artikel</a>
+                <a class="nav-link" href="artikel.html">Artikel</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="profile.html">Profil</a>
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="#galeri">Galeri</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#kontak">Kontak</a>
+                 <a class="nav-link" href="kontak.html">Kontak</a>
               </li>
             </ul>
           </div>
@@ -130,34 +130,34 @@
           <h1 class="text-center">Tujuan</h1>
           <ul>
             <li>
-              Meningkatkan kualitas Mahasiswa Program Studi Informatika melalui
+              <p> Meningkatkan kualitas Mahasiswa Program Studi Informatika melalui
               pemberdayaan Himpunan Mahasiswa secara komprehensif dan berwawasan
-              global
+              global</p>
             </li>
             <li>
-              Menjadi sebuah Himpunan Mahasiswa yang lebih aktif dan menjunjung
+              <p> Menjadi sebuah Himpunan Mahasiswa yang lebih aktif dan menjunjung
               tinggi nilai kekeluargaam serta menjadi wadah aspirasi dan
-              kreativitas bagi Mahasiswa Informatika STT-Garut.
+              kreativitas bagi Mahasiswa Informatika STT-Garut.</p>
             </li>
             <li>
-              Menjalin hubungan yang baik dan membangun kekeluarhaam antara
-              pengurus, anggota HIMATIF dan Program Studi Informatika.
+            <p>Menjalin hubungan yang baik dan membangun kekeluarhaam antara
+              pengurus, anggota HIMATIF dan Program Studi Informatika.</p>
             </li>
-            <li>Mengoptimalkan fungsional-fungsional setiap divisi.</li>
+            <li><p>Mengoptimalkan fungsional-fungsional setiap divisi.</p></li>
             <li>
-              Menjalin hubungan yang baik dengan pihak internal maupun eksternal
+            <p>Menjalin hubungan yang baik dengan pihak internal maupun eksternal
               dengan cara memperluas jaringan dengan alumni, civitas akademika
-              serta organisasi atau lembaga.
+              serta organisasi atau lembaga.</p>
             </li>
             <li>
-              Menyelenggarakan kegiatan yang mendukung tercapainya Mahasiswa
+            <p>Menyelenggarakan kegiatan yang mendukung tercapainya Mahasiswa
               Program Studi Informatika yang Kreatif, Aktif, Terampil dan
-              Berwawasan.
+              Berwawasan.</p>
             </li>
             <li>
-              Menampung seluruh elemen Mahasiswa Informatika menuju kehidupan
+            <p>Menampung seluruh elemen Mahasiswa Informatika menuju kehidupan
               Kampus kritis yang mengedepankan Musyawarah Mufakat, Bertanggung
-              jawab, Dinamis dan Harmonis.
+              jawab, Dinamis dan Harmonis.</p>
             </li>
           </ul>
         </div>
