--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Halaman Profil | HIMATIF</title>
+  <title>Profil | HIMATIF</title>
   <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="assets/css/profileStyles.css" />
   <link rel="stylesheet" href="assets/css/navbar.css" />
@@ -23,16 +23,16 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Artikel</a>
+          <a class="nav-link" href="artikel.html">Artikel</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="profile.html">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Galeri</a>
+          <a class="nav-link" href="galeri.html">Galeri</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Kontak</a>
+          <a class="nav-link" href="kontak.html">Kontak</a>
         </li>
       </ul>
     </div>
@@ -52,7 +52,7 @@
   <!-- Profile -->
   <div class="content">
     <div class="d-flex flex-column align-items-center profile">
-      <img src="/assets/images/logo-himatif.png" alt="Logo Himatif"/>
+      <img src="./assets/images/logo-himatif.png" alt="Logo Himatif"/>
       <h5>Himpunan Mahasiswa Teknik Informatika</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto consectetur, dicta dolore, fugiat illo impedit inventore ipsam molestiae non nostrum porro ratione sapiente similique tempore. Delectus laboriosam possimus sit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto consectetur, dicta dolore, fugiat illo impedit inventore ipsam molestiae non nostrum porro ratione sapiente similique tempore. Delectus laboriosam possimus sit.</p>
@@ -62,34 +62,34 @@
       <h5>Tujuan</h5>
       <ul class="d-flex flex-column">
         <li>
-          Meningkatkan kualitas Mahasiswa Program Studi Informatika melalui
+          <p> Meningkatkan kualitas Mahasiswa Program Studi Informatika melalui
           pemberdayaan Himpunan Mahasiswa secara komprehensif dan berwawasan
-          global
+          global</p>
         </li>
         <li>
-          Menjadi sebuah Himpunan Mahasiswa yang lebih aktif dan menjunjung
+          <p> Menjadi sebuah Himpunan Mahasiswa yang lebih aktif dan menjunjung
           tinggi nilai kekeluargaam serta menjadi wadah aspirasi dan
-          kreativitas bagi Mahasiswa Informatika STT-Garut.
+          kreativitas bagi Mahasiswa Informatika STT-Garut.</p>
         </li>
         <li>
-          Menjalin hubungan yang baik dan membangun kekeluarhaam antara
-          pengurus, anggota HIMATIF dan Program Studi Informatika.
+        <p>Menjalin hubungan yang baik dan membangun kekeluarhaam antara
+          pengurus, anggota HIMATIF dan Program Studi Informatika.</p>
         </li>
-        <li>Mengoptimalkan fungsional-fungsional setiap divisi.</li>
+        <li><p>Mengoptimalkan fungsional-fungsional setiap divisi.</p></li>
         <li>
-          Menjalin hubungan yang baik dengan pihak internal maupun eksternal
+        <p>Menjalin hubungan yang baik dengan pihak internal maupun eksternal
           dengan cara memperluas jaringan dengan alumni, civitas akademika
-          serta organisasi atau lembaga.
+          serta organisasi atau lembaga.</p>
         </li>
         <li>
-          Menyelenggarakan kegiatan yang mendukung tercapainya Mahasiswa
+        <p>Menyelenggarakan kegiatan yang mendukung tercapainya Mahasiswa
           Program Studi Informatika yang Kreatif, Aktif, Terampil dan
-          Berwawasan.
+          Berwawasan.</p>
         </li>
         <li>
-          Menampung seluruh elemen Mahasiswa Informatika menuju kehidupan
+        <p>Menampung seluruh elemen Mahasiswa Informatika menuju kehidupan
           Kampus kritis yang mengedepankan Musyawarah Mufakat, Bertanggung
-          jawab, Dinamis dan Harmonis.
+          jawab, Dinamis dan Harmonis.</p>
         </li>
       </ul>
     </div>
